# aws-cspm-scanner

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  security-scan.yml
cspm/: __init__.py  cli.py  compliance.py  models.py  reporter.py  risk.py
cspm/scanners/: __init__.py  base.py  cloudtrail_scanner.py  ec2_scanner.py  iam_scanner.py  s3_scanner.py
cspm/utils/: aws_session.py
scripts/: install-hooks.sh
tests/: __init__.py  test_cli.py  test_cloudtrail_scanner.py  test_ec2_scanner.py  test_iam_scanner.py  test_models.py  test_reporter.py  test_s3_scanner.py
